src/runtime/prim.h

double sqrt(double);
double sin(double);
double cos(double);
double tan(double);
double asin(double);
double acos(double);
double atan(double);
double atan2(double, double);
double exp(double);
double pow(double, double);
double log10(double);
double sinh(double);
double cosh(double);
double tanh(double);
double floor(double x);
double ceil(double x);
double round(double x);
float copysignf(float, float);
float ceilf(float);
float floorf(float);
float roundf(float);
float ldexpf(float, int);
float frexpf(float, int *);
float modff(float, float *);
float nextafterf(float, float);